--- a/config/application.yml
+++ b/config/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: qa-api
   datasource:
-    url: jdbc:mysql://testdatabase.cbda90k3dzzk.us-east-2.rds.amazonaws.com:3306/innodb
+    url: jdbc:mysql://qadb.cbda90k3dzzk.us-east-2.rds.amazonaws.com:3306/innodb
     username: admin
     password: testpassword
 
